# examnova

./: .env.example  .gitignore  LICENSE  README.md  examnova.txt
apps/: README.md
apps/backend/: pyproject.toml  run_backend.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/agent/: README.md  router.py
apps/backend/app/routes/: agent.py  history.py  ocr.py  settings.py  study.py  study_notes.py  study_state.py  thinking.py  wrongbook.py
apps/backend/app/schemas/: agent.py  history.py  settings.py  study.py  study_note.py  study_state.py  thinking.py  wrongbook.py
apps/backend/app/services/: app_paths.py  db_utils.py  history_store.py  json_utils.py  llm_client.py  ocr_service.py  review_strategy.py  settings_store.py  study_note_store.py  study_state_store.py  wrongbook_store.py
apps/backend/app/skills/: README.md  learning.py  thinking.py
apps/desktop/: next.config.ts  package-lock.json  package.json
apps/desktop/app/: globals.css  layout.tsx  page.module.css  page.tsx  types.ts
apps/desktop/app/components/: HistoryPanel.tsx  StudyPanel.tsx  ThinkingPanel.tsx
apps/desktop/electron/: main.cjs  preload.cjs
codex-skills/examnova-builder/: SKILL.md
codex-skills/examnova-builder/agents/: openai.yaml
codex-skills/examnova-builder/references/: backend-rules.md  ui-rules.md
docs/: ARCHITECTURE.md  GITHUB-SHOWCASE.md  MINIMAX-BEGINNER.txt  MINIMAX.md  PACKAGING.md  ROADMAP.md  RUNBOOK.md  SESSION.md
docs/screenshots/: README.md
scripts/: package-electron.ps1  set-llm.ps1  start-all.ps1  start-backend.ps1  start-desktop.ps1  stop-dev.ps1
